--- a/main.ipynb
+++ b/main.ipynb
@@ -5,12 +5,12 @@
    "id": "e568f312",
    "metadata": {},
    "source": [
-    "### Урок"
+    "### Урок 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cb41d950",
    "metadata": {},
    "outputs": [],
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "afe42a73",
    "metadata": {},
    "outputs": [
@@ -721,7 +721,7 @@
        "4  Настя     NaN   35000.0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "id": "550b3d17",
    "metadata": {},
    "outputs": [
@@ -752,10 +752,88 @@
       "dtypes: float64(1), object(2)\n",
       "memory usage: 416.0+ bytes\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>11.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>136727.272727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>111891.993377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>23000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>57000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>72000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>225000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>350000.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Salary\n",
+       "count      11.000000\n",
+       "mean   136727.272727\n",
+       "std    111891.993377\n",
+       "min     23000.000000\n",
+       "25%     57000.000000\n",
+       "50%     72000.000000\n",
+       "75%    225000.000000\n",
+       "max    350000.000000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "salary_df.info()"
+    "salary_df.info()\n",
+    "salary_df.describe()"
    ]
   },
   {
@@ -788,11 +866,525 @@
     "\n",
     "print(group)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a986609b",
+   "metadata": {},
+   "source": [
+    "### Урок 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d346ee6",
+   "metadata": {},
+   "source": [
+    "#### Временные ряды"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4ea7ce59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3f456f6",
+   "metadata": {},
+   "source": [
+    "Генерируем датасет"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "aa032cf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = pd.date_range('2022-07-26', periods=10, freq='D')\n",
+    "\n",
+    "values = np.random.randn(10)\n",
+    "\n",
+    "df = pd.DataFrame({\"Date\": dates, \"Value\": values})\n",
+    "\n",
+    "df.set_index(\"Date\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e61694c8",
+   "metadata": {},
+   "source": [
+    "Вывод и резамплирование"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1f4f9ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df)\n",
+    "\n",
+    "month = df.resample('ME').mean()\n",
+    "\n",
+    "print(month)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0b6f003",
+   "metadata": {},
+   "source": [
+    "#### Выбросы"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "30082f41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35bdebc5",
+   "metadata": {},
+   "source": [
+    "Создаем датафрейм c выбросом"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "05c8147a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {'value': [1, 2, 3, 3, 3, 4, 4, 4, 5, 6, 7, 8, 9, 10, 55]}\n",
+    "df = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0989826f",
+   "metadata": {},
+   "source": [
+    "Первый вариант визуализации"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10007e14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['value'].hist()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "160bfb29",
+   "metadata": {},
+   "source": [
+    "Второй вариант визуализации"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3a14fd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.boxplot(column='value')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c6ea384",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb3f2da2",
+   "metadata": {},
+   "source": [
+    "Убираем выбросы (все что выходит за межквартильный интервал). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "0c7691b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# первый квартиль\n",
+    "q1 = df['value'].quantile(0.25)\n",
+    "# второй квартиль\n",
+    "q3 = df['value'].quantile(0.75)\n",
+    "# межквартильный размах\n",
+    "iqr = q3 - q1\n",
+    "\n",
+    "# Выбор коэффициента **1.5** основан на эмпирическом наблюдении. \n",
+    "# Эта константа была предложена Джоном Тьюки как разумный компромисс \n",
+    "# для обнаружения необычных значений (выбросов) в данных\n",
+    "downside = q1 - 1.5 * iqr\n",
+    "upside = q3 + 1.5 * iqr\n",
+    "\n",
+    "df_new = df[(df['value'] > downside) & (df['value'] < upside)]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d0d3a40",
+   "metadata": {},
+   "source": [
+    "Визуализируем новый датафрейм (без выбросов)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2f7fdb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new.boxplot(column='value')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9c23b2d",
+   "metadata": {},
+   "source": [
+    "#### Категориальные данные "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0617f7ec",
+   "metadata": {},
+   "source": [
+    "Создание датафрейма"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "7e8f5d3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    'name': ['Alice', 'Bob', 'Charlie', 'David', 'Eve'],\n",
+    "    'gender': ['female', 'male', 'male', 'male', 'female'],\n",
+    "    'department': ['HR', 'Engineering', 'Marketing', 'Engineering', 'HR']\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9198c085",
+   "metadata": {},
+   "source": [
+    "Делаем категории"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "2d05dd93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['gender'] = df['gender'].astype('category')\n",
+    "df['department'] = df['department'].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3016ee5",
+   "metadata": {},
+   "source": [
+    "Информация о категориях"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9395933",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df['gender'].cat.categories)\n",
+    "print(df['department'].cat.categories)\n",
+    "\n",
+    "print(df['gender'].cat.codes)\n",
+    "print(df['department'].cat.codes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81cf5caa",
+   "metadata": {},
+   "source": [
+    "Добавление категории"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cca527af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['department'] = df['department'].cat.add_categories(['Finance'])\n",
+    "print(df['department'].cat.categories)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d479a5fb",
+   "metadata": {},
+   "source": [
+    "Удаление категории"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56fe88e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['department'] = df['department'].cat.remove_categories(['HR'])\n",
+    "print(df['department'].cat.categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9d0ee43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "343d962e",
+   "metadata": {},
+   "source": [
+    "### Домашка по Уроку 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e805ef3",
+   "metadata": {},
+   "source": [
+    "Создание датафрейма"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "02db7541",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Ученик  Математика  Физика  Русский язык  История  География\n",
+      "0   Алексей          85      90            88       85         92\n",
+      "1     Борис          90      85            92       88         85\n",
+      "2  Владимир          78      92            85       90         88\n",
+      "3   Дмитрий          92      88            90       92         90\n",
+      "4     Елена          88      76            95       89         84\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    'Ученик': ['Алексей', 'Борис', 'Владимир', 'Дмитрий', 'Елена', 'Федор', 'Георгий', 'Харитон', 'Иван', 'Юлия'],\n",
+    "    'Математика': [85, 90, 78, 92, 88, 76, 95, 89, 84, 91],\n",
+    "    'Физика': [90, 85, 92, 88, 76, 95, 89, 84, 91, 93],\n",
+    "    'Русский язык': [88, 92, 85, 90, 95, 89, 84, 91, 93, 86],\n",
+    "    'История': [85, 88, 90, 92, 89, 84, 91, 93, 86, 95],\n",
+    "    'География': [92, 85, 88, 90, 84, 91, 93, 86, 95, 89]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "563178ed",
+   "metadata": {},
+   "source": [
+    "Средняя оценка"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e67088b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Математика      86.8\n",
+      "Физика          88.3\n",
+      "Русский язык    89.3\n",
+      "История         89.3\n",
+      "География       89.3\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_grades = df[['Математика', 'Физика', 'Русский язык', 'История', 'География']].mean()\n",
+    "\n",
+    "print(average_grades)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80f5b00c",
+   "metadata": {},
+   "source": [
+    "Медианная оценка"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "00c4bebf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Математика      88.5\n",
+      "Физика          89.5\n",
+      "Русский язык    89.5\n",
+      "История         89.5\n",
+      "География       89.5\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "median_grades = df[['Математика', 'Физика', 'Русский язык', 'История', 'География']].median()\n",
+    "\n",
+    "print(median_grades)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64d97361",
+   "metadata": {},
+   "source": [
+    "Q1 и Q3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "02effe61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1 по математике: 84.25\n",
+      "Q3 по математике: 90.75\n",
+      "IQR по математике: 6.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "q1_math = df['Математика'].quantile(0.25)\n",
+    "\n",
+    "q3_math = df['Математика'].quantile(0.75)\n",
+    "\n",
+    "iqr = q3_math - q1_math\n",
+    "\n",
+    "print(f\"Q1 по математике: {q1_math}\")\n",
+    "print(f\"Q3 по математике: {q3_math}\")\n",
+    "print(f\"IQR по математике: {iqr}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2d55e7f",
+   "metadata": {},
+   "source": [
+    "Стандартное отклонение"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "6e6fd885",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Математика      6.088240\n",
+      "Физика          5.498485\n",
+      "Русский язык    3.591657\n",
+      "История         3.591657\n",
+      "География       3.591657\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "std_dev = df[['Математика', 'Физика', 'Русский язык', 'История', 'География']].std()\n",
+    "\n",
+    "print(std_dev)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.10.10)",
    "language": "python",
    "name": "python3"
   },
